# RaySnakeSDL

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
src/: CMakeLists.txt  main.cpp
src/Core/: Application.cpp  Application.h  BaseParams.h  Game.cpp  Game.h  GameDifficulty.h  Level.cpp  Level.h  LoaderParams.h  Vector2.cpp  Vector2.h
src/Managers/: FontManger.cpp  FontManger.h  InputManager.cpp  InputManager.h  SoundManger.cpp  SoundManger.h  TextureManger.cpp  TextureManger.h
src/Menu/: AboutMenu.cpp  AboutMenu.h  DifficultlyMenu.cpp  DifficultlyMenu.h  MainMenu.cpp  MainMenu.h  Menu.h
src/Objects/: Food.cpp  Food.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
src/resources/: app.rc
